Fixed navbar z-index

--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -87,7 +87,7 @@
   left: 0;
   width: 100vw;
   height: 5em;
-  z-index: 1;
+  z-index: 900;
   height: 10em;
 }
 
@@ -96,7 +96,6 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  z-index: 2;
 }
 
 // Navbar
@@ -107,7 +106,6 @@
   justify-content: flex-end;
   width: 90%;
   max-width: 1700px;
-  z-index: 3;
 }
 
 .navbar {
